--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     </header>
     <main>
-        <div class="sasha_dota2"></div>
+        <div class="sasha_leage_of_legends"></div>
     </main>
     <footer>
         
