--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-    </header>
     <main>
+        <section>
+            <h1>Добро пожаловать в VeloPro</h1>
+            <p>Лучшие велосипеды для вашего активного образа жизни</p>
+        </section>
     </main>
-    <footer>
-    </footer>
-    
 </body>
 </html>
