--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <div class="header-content">
+            <a href="/" class="logo">VeloPro</a>
+            <nav>
+                <ul>
+                    <li><a href="">Главная</a></li>
+                    <li><a href="">Каталог</a></li>
+                    <li><a href="">О нас</a></li>
+                    <li><a href="">Контакты</a></li>
+                    <li>
+                        <a href="" class="cart-icon">
+                            Корзина
+                            <span class="cart-count">0</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <main>
         <section>
             <h1>Добро пожаловать в VeloPro</h1>
