--- a/index.html
+++ b/index.html
@@ -13,5 +13,35 @@
             <p>Лучшие велосипеды для вашего активного образа жизни</p>
         </section>
     </main>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Навигация</h3>
+                <ul>
+                    <li><a href="/catalog">Каталог</a></li>
+                    <li><a href="/cart">Корзина</a></li>
+                    <li><a href="/about">О нас</a></li>
+                    <li><a href="/contacts">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Категории</h3>
+                <ul>
+                    <li><a href="/catalog/mountain">Горные велосипеды</a></li>
+                    <li><a href="/catalog/road">Шоссейные велосипеды</a></li>
+                    <li><a href="/catalog/city">Городские велосипеды</a></li>
+                    <li><a href="/catalog/kids">Детские велосипеды</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Контакты</h3>
+                <ul>
+                    <li>Телефон: +7 (XXX) XXX-XX-XX</li>
+                    <li>Email: info@velopro.ru</li>
+                    <li>Адрес: г. Самара, ул. Примерная, 123</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
