--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <div class="footer-section">
                 <h3>Контакты</h3>
                 <ul>
-                    <li>Телефон: +7 (XXX) XXX-XX-XX</li>
-                    <li>Email: info@velopro.ru</li>
-                    <li>Адрес: г. Самара, ул. Примерная, 123</li>
+                    <li>Телефон: +7 (917) 260-06-21</li>
+                    <li>Email: mishkaosip.ru</li>
+                    <li>Адрес: г. Самара, Московское шоссе 34Б</li>
                 </ul>
             </div>
         </div>
