добавил соцсети в контактах

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,6 +59,14 @@
                     <li>Email: mishkaosip.ru</li>
                     <li>Адрес: г. Самара, Московское шоссе 34Б</li>
                 </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Мы в соцсетях</h3>
+                <div class="social-links">
+                    <a href="#"><img src="https://via.placeholder.com/30" alt="VK"></a>
+                    <a href="#"><img src="https://via.placeholder.com/30" alt="Telegram"></a>
+                    <a href="#"><img src="https://via.placeholder.com/30" alt="YouTube"></a>
+                </div>
             </div>
         </div>
     </footer>
