добавил шаблон стилей и изменил написание nav в index.html

--- a/index.html
+++ b/index.html
@@ -4,25 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Магазин велосипедов</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <div class="header-content">
+        <div class="header_content">
             <a href="/" class="logo">VeloPro</a>
             <nav>
-                <ul>
-                    <li><a href="">Главная</a></li>
-                    <li><a href="">Каталог</a></li>
-                    <li><a href="">О нас</a></li>
-                    <li><a href="">Контакты</a></li>
-                    <li>
-                        <a href="" class="cart-icon">
-                            Корзина
-                            <span class="cart-count">0</span>
-                        </a>
-                    </li>
-                </ul>
+                <a  href="" class="header_link">Главная</a>
+                <a href="" class="header_link">Каталог</a>
+                <a href="" class="header_link">О нас</a>
+                <a href="" class="header_link">Контакты</a>
+                <a href="" class="header_link" class="cart_icon">
+                    Корзина
+                    <span class="cart_count">0</span>
+                </a>
             </nav>
         </div>
     </header>
@@ -33,26 +29,26 @@
         </section>
     </main>
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
+        <div class="footer_content">
+            <div class="footer_section">
                 <h3>Навигация</h3>
                 <ul>
-                    <li><a href="/catalog">Каталог</a></li>
-                    <li><a href="/cart">Корзина</a></li>
-                    <li><a href="/about">О нас</a></li>
-                    <li><a href="/contacts">Контакты</a></li>
+                    <li><a href="">Каталог</a></li>
+                    <li><a href="">Корзина</a></li>
+                    <li><a href="">О нас</a></li>
+                    <li><a href="">Контакты</a></li>
                 </ul>
             </div>
-            <div class="footer-section">
+            <div class="footer_section">
                 <h3>Категории</h3>
                 <ul>
-                    <li><a href="/catalog/mountain">Горные велосипеды</a></li>
-                    <li><a href="/catalog/road">Шоссейные велосипеды</a></li>
-                    <li><a href="/catalog/city">Городские велосипеды</a></li>
-                    <li><a href="/catalog/kids">Детские велосипеды</a></li>
+                    <li><a href="">Горные велосипеды</a></li>
+                    <li><a href="">Шоссейные велосипеды</a></li>
+                    <li><a href="">Городские велосипеды</a></li>
+                    <li><a href="/">Детские велосипеды</a></li>
                 </ul>
             </div>
-            <div class="footer-section">
+            <div class="footer_section">
                 <h3>Контакты</h3>
                 <ul>
                     <li>Телефон: +7 (917) 260-06-21</li>
@@ -60,7 +56,7 @@
                     <li>Адрес: г. Самара, Московское шоссе 34Б</li>
                 </ul>
             </div>
-            <div class="footer-section">
+            <div class="footer_section">
                 <h3>Мы в соцсетях</h3>
                 <div class="social-links">
                     <a href="#"><img src="https://via.placeholder.com/30" alt="VK"></a>
