--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
         <div class="header_content">
             <a href="/" class="logo">VeloPro</a>
             <nav>
-                <a  href="" class="header_link">Главная</a>
-                <a href="" class="header_link">Каталог</a>
-                <a href="" class="header_link">О нас</a>
-                <a href="" class="header_link">Контакты</a>
-                <a href="" class="header_link" class="cart_icon">
-                    Корзина
-                    <span class="cart_count">0</span>
-                </a>
+                <ul class="header_list">
+                    <li><a href="" class="header_link">Главная</a></li>
+                    <li><a href="" class="header_link">Каталог</a></li>
+                    <li><a href="" class="header_link">О нас</a></li>
+                    <li><a href="" class="header_link">Контакты</a></li>
+                    <li>
+                        <a href="" class="cart_icon, header_link">
+                            Корзина
+                            <span class="cart_count">0</span>
+                        </a>
+                    </li>
+                </ul>
             </nav>
         </div>
     </header>
