проверка работы коммитов

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <section>
-            <h1>Добро пожаловать в VeloPro</h1>
+            <h1>Добро пожаловать в VeloShubinPro</h1>
             <p>Лучшие велосипеды для вашего активного образа жизни</p>
         </section>
     </main>
