Добавил новую страницу catalog, также изменил css файл, изменил стиль сайта на более приятный

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <header>
-        <div class="header_content">
+        <div class="header__content">
             <a href="/" class="logo">VeloPro</a>
             <nav>
                 <ul class="header_list">
-                    <li><a href="" class="header_link">Главная</a></li>
-                    <li><a href="" class="header_link">Каталог</a></li>
+                    <li><a href="index.html" class="header_link active">Главная</a></li>
+                    <li><a href="catalog.html" class="header_link">Каталог</a></li>
                     <li><a href="" class="header_link">О нас</a></li>
                     <li><a href="" class="header_link">Контакты</a></li>
                     <li>
-                        <a href="" class="cart_icon, header_link">
+                        <a href="" class="cart_icon header_link">
                             Корзина
                             <span class="cart_count">0</span>
                         </a>
@@ -30,6 +30,7 @@
         <section>
             <h1>Добро пожаловать в VeloShubinPro</h1>
             <p>Лучшие велосипеды для вашего активного образа жизни</p>
+            <a href="catalog.html" class="browse-catalog">Перейти в каталог</a>
         </section>
     </main>
     <footer>
@@ -37,7 +38,7 @@
             <div class="footer_section">
                 <h3>Навигация</h3>
                 <ul>
-                    <li><a href="">Каталог</a></li>
+                    <li><a href="catalog.html">Каталог</a></li>
                     <li><a href="">Корзина</a></li>
                     <li><a href="">О нас</a></li>
                     <li><a href="">Контакты</a></li>
@@ -49,7 +50,7 @@
                     <li><a href="">Горные велосипеды</a></li>
                     <li><a href="">Шоссейные велосипеды</a></li>
                     <li><a href="">Городские велосипеды</a></li>
-                    <li><a href="/">Детские велосипеды</a></li>
+                    <li><a href="">Детские велосипеды</a></li>
                 </ul>
             </div>
             <div class="footer_section">
@@ -71,4 +72,4 @@
         </div>
     </footer>
 </body>
-</html>
+</html> 
