Добавил картинки в catalog.html. Так же добавил иконки на двух разделах в footer. Еще поменял некоторые стили: добавил изменение кружка при наведении на категорию Корзина, в некоторых местах поставил текст на один уровень, на кнопки добавил изменение при наведении

--- a/catalog.html
+++ b/catalog.html
@@ -31,12 +31,11 @@
             <h1>Каталог велосипедов</h1>
             <a href="index.html" class="back-button">На главную</a>
         </div>
-        
+        <!-- Товар 1 -->
         <div class="catalog-grid">
-            <!-- Товар 1 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://via.placeholder.com/300x200?text=Горный+велосипед" alt="Горный велосипед">
+                    <img src="img/mountain_bike.jpg" alt="Горный велосипед">
                 </div>
                 <div class="product-info">
                     <h3>Горный велосипед XTR Pro</h3>
@@ -48,11 +47,10 @@
                     </div>
                 </div>
             </div>
-            
             <!-- Товар 2 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://via.placeholder.com/300x200?text=Шоссейный+велосипед" alt="Шоссейный велосипед">
+                    <img src="img/road_bike.jpg" alt="Шоссейный велосипед">
                 </div>
                 <div class="product-info">
                     <h3>Шоссейный велосипед RoadMaster</h3>
@@ -68,7 +66,7 @@
             <!-- Товар 3 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://via.placeholder.com/300x200?text=Городской+велосипед" alt="Городской велосипед">
+                    <img src="img/city_bike.jpg" alt="Городской велосипед">
                 </div>
                 <div class="product-info">
                     <h3>Городской велосипед CityRider</h3>
@@ -84,7 +82,7 @@
             <!-- Товар 4 -->
             <div class="product-card">
                 <div class="product-image">
-                    <img src="https://via.placeholder.com/300x200?text=Детский+велосипед" alt="Детский велосипед">
+                    <img src="img/children_bike.jpg" alt="Детский велосипед">
                 </div>
                 <div class="product-info">
                     <h3>Детский велосипед KidStar</h3>
@@ -129,9 +127,9 @@
             <div class="footer_section">
                 <h3>Мы в соцсетях</h3>
                 <div class="social-links">
-                    <a href="#"><img src="https://via.placeholder.com/30" alt="VK"></a>
-                    <a href="#"><img src="https://via.placeholder.com/30" alt="Telegram"></a>
-                    <a href="#"><img src="https://via.placeholder.com/30" alt="YouTube"></a>
+                    <a href="#"><img src="img/vk.svg" alt="VK"></a>
+                    <a href="#"><img src="img/telegram.svg" alt="Telegram"></a>
+                    <a href="#"><img src="img/youtube.svg" alt="YouTube"></a>
                 </div>
             </div>
         </div>
