--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
             <div class="footer_section">
                 <h3>Мы в соцсетях</h3>
                 <div class="social-links">
-                    
+                    <a href="#"><img src="img/vk.svg" alt="VK"></a>
+                    <a href="#"><img src="img/telegram.svg" alt="Telegram"></a>
+                    <a href="#"><img src="img/youtube.svg" alt="YouTube"></a>
                 </div>
             </div>
         </div>
