--- a/catalog.html
+++ b/catalog.html
@@ -13,8 +13,8 @@
             <nav>
                 <ul class="header_list">
                     <li><a href="index.html" class="header_link">Главная</a></li>
-                    <li><a href="catalog.html" class="header_link">Каталог</a></li>
-                    <li><a href="" class="header_link">О нас</a></li>
+                    <li><a href="catalog.html" class="header_link active">Каталог</a></li>
+                    <li><a href="about.html" class="header_link">О нас</a></li>
                     <li><a href="" class="header_link">Контакты</a></li>
                     <li>
                         <a href="" class="cart_icon header_link">
@@ -103,7 +103,7 @@
                 <ul>
                     <li><a href="catalog.html">Каталог</a></li>
                     <li><a href="">Корзина</a></li>
-                    <li><a href="">О нас</a></li>
+                    <li><a href="about.html">О нас</a></li>
                     <li><a href="">Контакты</a></li>
                 </ul>
             </div>
