--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
                     <li><a href="about.html" class="header_link">О нас</a></li>
                     <li><a href="" class="header_link">Контакты</a></li>
                     <li>
-                        <a href="" class="cart_icon header_link">
+                        <a href="cart.html" class="cart_icon header_link">
                             Корзина
                             <span class="cart_count">0</span>
                         </a>
@@ -102,7 +102,7 @@
                 <h3>Навигация</h3>
                 <ul>
                     <li><a href="catalog.html">Каталог</a></li>
-                    <li><a href="">Корзина</a></li>
+                    <li><a href="cart.html">Корзина</a></li>
                     <li><a href="about.html">О нас</a></li>
                     <li><a href="">Контакты</a></li>
                 </ul>
