исправление html страниц

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                     <li><a href="about.html" class="header_link active">О нас</a></li>
                     <li><a href="" class="header_link">Контакты</a></li>
                     <li>
-                        <a href="cart.html" class="cart_icon header_link">
+                        <a href="" class="cart_icon header_link">
                             Корзина
                             <span class="cart_count">0</span>
                         </a>
@@ -30,7 +30,7 @@
         <section>
             <h1>О нашем магазине</h1>
             <div class="about-content">
-                
+                    
                 <div class="about-text">
                     <h2>История VeloPro</h2>
                     <p>Наш магазин велосипедов был основан в 2015 году группой энтузиастов велосипедного спорта. Мы начали с небольшого помещения и ограниченного ассортимента, но благодаря любви к своему делу и постоянному стремлению к совершенству, быстро выросли в один из ведущих веломагазинов региона.</p>
@@ -88,7 +88,7 @@
                 <h3>Навигация</h3>
                 <ul>
                     <li><a href="catalog.html">Каталог</a></li>
-                    <li><a href="cart.html">Корзина</a></li>
+                    <li><a href="">Корзина</a></li>
                     <li><a href="about.html">О нас</a></li>
                     <li><a href="">Контакты</a></li>
                 </ul>
@@ -96,10 +96,10 @@
             <div class="footer_section">
                 <h3>Категории</h3>
                 <ul>
-                    <li><a href="">Горные велосипеды</a></li>
-                    <li><a href="">Шоссейные велосипеды</a></li>
-                    <li><a href="">Городские велосипеды</a></li>
-                    <li><a href="">Детские велосипеды</a></li>
+                    <li><a href="catalog.html?category=mountain">Горные велосипеды</a></li>
+                    <li><a href="catalog.html?category=road">Шоссейные велосипеды</a></li>
+                    <li><a href="catalog.html?category=city">Городские велосипеды</a></li>
+                    <li><a href="catalog.html?category=children">Детские велосипеды</a></li>
                 </ul>
             </div>
             <div class="footer_section">
@@ -120,5 +120,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/api.js"></script>
 </body>
 </html> 
