--- a/cart.html
+++ b/cart.html
@@ -88,5 +88,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/api.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 </html> 
