--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <section>
-            <h1>Добро пожаловать в VeloPro</h1>
+            <h1>Добро пожаловать в VeloShubinPro</h1>
             <p>Лучшие велосипеды для вашего активного образа жизни</p>
             <a href="catalog.html" class="browse-catalog">Перейти в каталог</a>
         </section>
@@ -47,10 +47,10 @@
             <div class="footer_section">
                 <h3>Категории</h3>
                 <ul>
-                    <li><a href="">Горные велосипеды</a></li>
-                    <li><a href="">Шоссейные велосипеды</a></li>
-                    <li><a href="">Городские велосипеды</a></li>
-                    <li><a href="">Детские велосипеды</a></li>
+                    <li><a href="catalog.html?category=mountain">Горные велосипеды</a></li>
+                    <li><a href="catalog.html?category=road">Шоссейные велосипеды</a></li>
+                    <li><a href="catalog.html?category=city">Городские велосипеды</a></li>
+                    <li><a href="catalog.html?category=children">Детские велосипеды</a></li>
                 </ul>
             </div>
             <div class="footer_section">
@@ -71,5 +71,6 @@
             </div>
         </div>
     </footer>
+    <script src="js/api.js"></script>
 </body>
 </html> 
