Добавил настоящие ссылки на соцсети

--- a/about.html
+++ b/about.html
@@ -123,9 +123,9 @@
             <div class="footer_section">
                 <h3>Мы в соцсетях</h3>
                 <div class="social-links">
-                    <a href="#"><img src="img/vk.svg" alt="VK"></a>
-                    <a href="#"><img src="img/telegram.svg" alt="Telegram"></a>
-                    <a href="#"><img src="img/youtube.svg" alt="YouTube"></a>
+                    <a href="https://vk.com/m0tilda228"><img src="img/vk.svg" alt="VK"></a>
+                    <a href="https://t.me/MOTILDA228"><img src="img/telegram.svg" alt="Telegram"></a>
+                    <a href="https://www.youtube.com/watch?v=GAeB5jpYokk"><img src="img/youtube.svg" alt="YouTube"></a>
                 </div>
             </div>
         </div>
