Добавил ссылку на корзину в "о нас"

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                     <li><a href="about.html" class="header_link active">О нас</a></li>
                     <li><a href="" class="header_link">Контакты</a></li>
                     <li>
-                        <a href="" class="cart_icon header_link">
+                        <a href="cart.html" class="cart_icon header_link">
                             Корзина
                             <span class="cart_count">0</span>
                         </a>
