На главной странице добавлена секция "Почему выбирают нас" с четырьмя преимуществами

--- a/index.html
+++ b/index.html
@@ -70,6 +70,40 @@
                 <div class="loading-spinner">Загрузка товаров...</div>
             </div>
         </section>
+
+        <section class="advantages-section">
+            <h2 class="section-title">Почему выбирают нас</h2>
+            <div class="advantages-grid">
+                <div class="advantage-item">
+                    <div class="advantage-icon">
+                        <img src="img/quality-icon.svg" alt="Качество">
+                    </div>
+                    <h3>Гарантия качества</h3>
+                    <p>Все наши велосипеды проходят многоступенчатый контроль качества</p>
+                </div>
+                <div class="advantage-item">
+                    <div class="advantage-icon">
+                        <img src="img/delivery-icon.svg" alt="Доставка">
+                    </div>
+                    <h3>Быстрая доставка</h3>
+                    <p>Доставляем по всей России. Бесплатно при заказе от 10 000 ₽</p>
+                </div>
+                <div class="advantage-item">
+                    <div class="advantage-icon">
+                        <img src="img/service-icon.svg" alt="Сервис">
+                    </div>
+                    <h3>Сервисное обслуживание</h3>
+                    <p>Бесплатное первое ТО и скидки на все последующие работы</p>
+                </div>
+                <div class="advantage-item">
+                    <div class="advantage-icon">
+                        <img src="img/warranty-icon.svg" alt="Гарантия">
+                    </div>
+                    <h3>Расширенная гарантия</h3>
+                    <p>2 года гарантии на все модели и 5 лет на премиум-серию</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer_content">
