--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                     <li><a href="catalog.html">Каталог</a></li>
                     <li><a href="cart.html">Корзина</a></li>
                     <li><a href="about.html">О нас</a></li>
+                    <li><a href="">Контакты</a></li>
                 </ul>
             </div>
             <div class="footer_section">
