Revert "удаление ненужных ссылок"
This reverts commit 223e9f400f0d0703f7f6a6c6425b16734070bd77.

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
                     <li><a href="index.html" class="header_link">Главная</a></li>
                     <li><a href="catalog.html" class="header_link">Каталог</a></li>
                     <li><a href="about.html" class="header_link active">О нас</a></li>
+                    <li><a href="" class="header_link">Контакты</a></li>
                     <li>
                         <a href="cart.html" class="cart_icon header_link">
                             Корзина
@@ -99,6 +100,7 @@
                     <li><a href="catalog.html">Каталог</a></li>
                     <li><a href="">Корзина</a></li>
                     <li><a href="about.html">О нас</a></li>
+                    <li><a href="">Контакты</a></li>
                 </ul>
             </div>
             <div class="footer_section">
