--- a/cart.html
+++ b/cart.html
@@ -15,6 +15,7 @@
                     <li><a href="index.html" class="header_link">Главная</a></li>
                     <li><a href="catalog.html" class="header_link">Каталог</a></li>
                     <li><a href="about.html" class="header_link">О нас</a></li>
+                    <li><a href="" class="header_link">Контакты</a></li>
                     <li>
                         <a href="cart.html" class="cart_icon header_link active">
                             Корзина
@@ -57,6 +58,7 @@
                     <li><a href="catalog.html">Каталог</a></li>
                     <li><a href="cart.html">Корзина</a></li>
                     <li><a href="about.html">О нас</a></li>
+                    <li><a href="">Контакты</a></li>
                 </ul>
             </div>
             <div class="footer_section">
