--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <li><a href="index.html" class="header_link active">Главная</a></li>
                     <li><a href="catalog.html" class="header_link">Каталог</a></li>
                     <li><a href="about.html" class="header_link">О нас</a></li>
+                    <li><a href="" class="header_link">Контакты</a></li>
                     <li>
                         <a href="cart.html" class="cart_icon header_link">
                             Корзина
