убрана вкладка с главного меню "Контакты"

--- a/about.html
+++ b/about.html
@@ -15,9 +15,8 @@
                     <li><a href="index.html" class="header_link">Главная</a></li>
                     <li><a href="catalog.html" class="header_link">Каталог</a></li>
                     <li><a href="about.html" class="header_link active">О нас</a></li>
-                    <li><a href="" class="header_link">Контакты</a></li>
                     <li>
-                        <a href="" class="cart_icon header_link">
+                        <a href="cart.html" class="cart_icon header_link">
                             Корзина
                             <span class="cart_count">0</span>
                         </a>
@@ -98,9 +97,8 @@
                 <h3>Навигация</h3>
                 <ul>
                     <li><a href="catalog.html">Каталог</a></li>
-                    <li><a href="">Корзина</a></li>
+                    <li><a href="cart.html">Корзина</a></li>
                     <li><a href="about.html">О нас</a></li>
-                    <li><a href="">Контакты</a></li>
                 </ul>
             </div>
             <div class="footer_section">
