Добавление новых велосипедов в калькулятор

--- a/calculator.html
+++ b/calculator.html
@@ -60,7 +60,10 @@
                         <option value="city">Городской</option>
                         <option value="mountain">Горный</option>
                         <option value="road">Шоссейный</option>
-                        <option value="children">Детский</option>
+                        <option value="bmx">BMX</option>
+                        <option value="folding">Складной</option>
+                        <option value="gravel">Гравел</option>
+                        
                     </select>
                 </div>
 
