добавление описание калькулятора
добавил на главную страницу сообщение о существовании калькулятора подбора велосипеда

--- a/calculator.html
+++ b/calculator.html
@@ -53,15 +53,17 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="ridingStyle">Стиль езды:</label>
+                    <label for="ridingStyle">Вид велосипеда:</label>
                     <select id="ridingStyle" name="ridingStyle" required>
-                        <option value="">Выберите стиль езды</option>
+                        <option value="">Выберите вид велосипеда</option>
                         <option value="city">Городской</option>
                         <option value="mountain">Горный</option>
                         <option value="road">Шоссейный</option>
                         <option value="bmx">BMX</option>
-                        <option value="folding">Складной</option>
+                        <option value="fold">Складной</option>
                         <option value="gravel">Гравел</option>
+                        <option value="track">Трековый</option>
+                        
                         
                     </select>
                 </div>
