--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <section>
             <h1>Добро пожаловать в VeloPro</h1>
             <p>Лучшие велосипеды для вашего активного образа жизни</p>
+            <p><b>Подберем велосипед под ваши предпочтения</b></p>
             <a href="catalog.html" class="browse-catalog">Перейти в каталог</a>
         </section>
     </main>
