--- a/catalog.html
+++ b/catalog.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <div class="catalog-header">
-            <h1>Каталог велосипедов</h1>
+            <h1>VeloPro - подберем велосипед под ваши предпочтения</h1>
         </div>
         
         <div class="catalog-filters">
