--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
             <a href="/" class="logo">VeloPro</a>
             <nav>
                 <ul class="header_list">
-                    <li><a href="index.html" class="header_link active">Главная</a></li>
+                    <li><a href="main.html" class="header_link active">Главная</a></li>
                     <li><a href="catalog.html" class="header_link">Каталог</a></li>
                     <li><a href="about.html" class="header_link">О нас</a></li>
                     <li>
