--- a/calculator.html
+++ b/calculator.html
@@ -58,6 +58,7 @@
                         <option value="city">Городской</option>
                         <option value="mountain">Горный</option>
                         <option value="road">Шоссейный</option>
+                        <option value="children">Детский</option>
                         <option value="bmx">BMX</option>
                         <option value="fold">Складной</option>
                         <option value="gravel">Гравел</option>
