--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
                 </select>
             </div>
             <a href="calculator.html" class="btn btn-primary calculator-link">
-                <i class="fas fa-calculator"></i> Подобрать велосипед
+                <i class="fas fa-calculator"></i> Калькулятор подбора велосипеда
             </a>
         </div>
         
